--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -16,8 +16,8 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.0.0-canary.56",
-    "next-auth": "^5.0.0-beta.25",
+    "next": "^latest-version",
+    "next-auth": "^latest-version",
     "openssl": "^2.0.0",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-f38c22b244-20240704",
